AppBarLayout/NestedSrollView/Snackbar animation update.

--- a/browser/plugin.xml
+++ b/browser/plugin.xml
@@ -18,5 +18,10 @@
    	<js-module src="www/js/add_res.js" name="datetimeAddRes">
     	 <runs/>
   	</js-module>
+  	
+  	<!-- start tsc -->
+     <source-file src="tsc/src/web/widget/DatePickerImpl.ts" target-dir="tsc/src/web/widget"/>
+     <source-file src="tsc/src/web/widget/TimePickerImpl.ts" target-dir="tsc/src/web/widget"/>
+     <!-- tsc end -->
   </platform>
 </plugin>
