--- a/plugin.xml
+++ b/plugin.xml
@@ -78,6 +78,11 @@
    	<js-module src="browser/www/js/add_res.js" name="datetimeAddRes">
     	 <runs/>
   	</js-module>
+  	
+  	<!-- start tsc -->
+     <source-file src="browser/tsc/src/web/widget/DatePickerImpl.ts" target-dir="tsc/src/web/widget"/>
+     <source-file src="browser/tsc/src/web/widget/TimePickerImpl.ts" target-dir="tsc/src/web/widget"/>
+     <!-- tsc end -->
   </platform>
   <platform name="swt">
   	<config-file target="res/xml/config.xml" parent="/*">
@@ -87,6 +92,11 @@
       </feature>
     </config-file>
    	<framework src="swt/core.gradle" custom="true" type="gradleReference" />
+   	
+   	 <!-- start tsc -->
+     <source-file src="swt/tsc/src/swt/widget/DatePickerImpl.ts" target-dir="tsc/src/swt/widget"/>
+     <source-file src="swt/tsc/src/swt/widget/TimePickerImpl.ts" target-dir="tsc/src/swt/widget"/>
+     <!-- tsc end -->
   </platform>
 
 
