--- a/browser/plugin.xml
+++ b/browser/plugin.xml
@@ -13,8 +13,8 @@
       </feature>
     </config-file>
    	<framework src="core.gradle" custom="true" type="gradleReference" />
-	<resource-file src="www/css/date-time-picker.min.css" target="../../src/main/assets/www/css/date-time-picker.min.css" />
-   	<resource-file src="www/js/date-time-picker.min.js" target="../../src/main/assets/www/js/date-time-picker.min.js" />
+	<asset src="www/css/date-time-picker.min.css" target="css/date-time-picker.min.css" />
+   	<asset src="www/js/date-time-picker.min.js" target="js/date-time-picker.min.js" />
    	<js-module src="www/js/add_res.js" name="datetimeAddRes">
     	 <runs/>
   	</js-module>
