--- a/plugin.xml
+++ b/plugin.xml
@@ -73,8 +73,8 @@
       </feature>
     </config-file>
    	<framework src="browser/core.gradle" custom="true" type="gradleReference" />
-	<resource-file src="browser/www/css/date-time-picker.min.css" target="../../src/main/assets/www/css/date-time-picker.min.css" />
-   	<resource-file src="browser/www/js/date-time-picker.min.js" target="../../src/main/assets/www/js/date-time-picker.min.js" />
+	<asset src="browser/www/css/date-time-picker.min.css" target="css/date-time-picker.min.css" />
+   	<asset src="browser/www/js/date-time-picker.min.js" target="js/date-time-picker.min.js" />
    	<js-module src="browser/www/js/add_res.js" name="datetimeAddRes">
     	 <runs/>
   	</js-module>
